# picoshell

./: CMakeLists.txt  README.md
src/: parser.c  parser.h  picoshell.c  picoshell.h  psh.c  utils.c  utils.h
